# airfield-timezones

./: .gitignore  Cargo.toml  build.rs  time_zones.toml
contrib/: load_into_wikidata.py  wikidata_airport_icao.sparql  wikidata_iana_timezone.sparql
src/: main.rs  regex_ext.rs
src/pdf_reading/: encoding.txt  mod.rs
